--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,6 +4,9 @@
 // Global Foundation Settings
 @import "settings";
 
+// Custom Global Settings
+@import "custom-settings";
+
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
