--- a/sass/_custom-settings.scss
+++ b/sass/_custom-settings.scss
@@ -1,1 +1,38 @@
 // Custom Global Settings and Variables
+
+// This is the default html and body font-size for the base em value.
+$em-base: 14px;
+
+// We use these to control various global styles
+$body-font-color: #222;
+$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+
+// Theme Specific Variables
+$primary: #fff;
+$secondary: #ccc;
+$tertiary: #aaa;
+
+// Social Color Variables
+$facebook: #3b5998;
+$twitter: #00aced;
+$googleplus: #dd4b39;
+$linkedin: #007bb6;
+$pinterest: #cb2027;
+$youtube: #bb0000;
+$instagram: #517fa4;
+$flickr: #ff0084;
+$foursquare: #0072b1;
+$rss: #ffcc00;
+
+// Grid Variables
+$row-width: 80em;
+$column-gutter: 1.875em;
+$total-columns: 12;
+
+// We use these to control heading font sizes
+$h1-font-size: emCalc(20px);
+$h2-font-size: emCalc(18px);
+$h3-font-size: emCalc(17px);
+$h4-font-size: emCalc(16px);
+$h5-font-size: emCalc(15px);
+$h6-font-size: 1em;
