--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -12,12 +12,12 @@
 //
 
 // This is the default html and body font-size for the base em value.
-$em-base: 14px;
+// $em-base: 14px;
 
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -51,9 +51,8 @@ $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 //
 
 // $row-width: 62.5em;
-$row-width: 80em;
-$column-gutter: 1.875em;
-$total-columns: 12;
+// $column-gutter: 1.875em;
+// $total-columns: 12;
 
 //
 // Block Grid Variables
@@ -87,12 +86,6 @@ $total-columns: 12;
 // $h4-font-size: emCalc(23px);
 // $h5-font-size: emCalc(18px);
 // $h6-font-size: 1em;
-$h1-font-size: emCalc(24px);
-$h2-font-size: emCalc(22px);
-$h3-font-size: emCalc(20px);
-$h4-font-size: emCalc(18px);
-$h5-font-size: emCalc(16px);
-$h6-font-size: 1em;
 
 // These control how subheaders are styled.
 // $subheader-line-height: 1.4;
