--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,6 +7,9 @@
 // Custom Global Settings
 @import "custom-settings";
 
+// Custom Global Mixins
+@import "custom-mixins";
+
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
