--- a/sass/_custom-settings.scss
+++ b/sass/_custom-settings.scss
@@ -8,9 +8,8 @@ $body-font-color: #222;
 $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 
 // Theme Specific Variables
-$primary: #fff;
-$secondary: #ccc;
-$tertiary: #aaa;
+$primary-color: #2ba6cb;
+$secondary-color: #ccc;
 
 // Social Color Variables
 $facebook: #3b5998;
