--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -108,15 +108,15 @@ textarea {
 
 /* Links */
 a {
-	color: $primary;
+	color: $primary-color;
 }
 a:visited {
-	color: $primary;
+	color: $primary-color;
 }
 a:hover,
 a:focus,
 a:active {
-	color: $primary - #222;
+	color: $primary-color - #222;
 }
 
 /* Alignment */
@@ -220,73 +220,77 @@ hgroup {
 /* =Menu
 ----------------------------------------------- */
 
-.main-navigation {
-	clear: both;
-	display: block;
-	width: 100%;
+.navigation-main {
+        clear: both;
+        display: block;
+        float: left;
+        width: 100%;
 }
-.main-navigation ul {
-	list-style: none;
-	margin: 0;
-	padding-left: 0;
-        overflow: visible;
-        background: #fff;
+.navigation-main ul {
+        list-style: none;
+        margin: 0;
+        padding-left: 0;
 }
-.main-navigation li {
-	float: left;
-	position: relative;
+.navigation-main li {
+        float: left;
+        position: relative;
 }
-.main-navigation a {
-	display: block;
-	text-decoration: none;
-        padding: 1px 8px;
-        border-right: 1px solid #bbb;
+.navigation-main a {
+        display: block;
+        text-decoration: none;
 }
-.main-navigation ul ul {
-	-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-        border: 1px solid #ddd;
-	display: none;
-	float: left;
-	position: absolute;
-	top: 1.6em;
-	left: 0;
-	z-index: 99999;
-        background: #fff;
+.navigation-main ul ul {
+        box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+        display: none;
+        float: left;
+        position: absolute;
+        top: 1.5em;
+        left: 0;
+        z-index: 99999;
 }
-.main-navigation ul ul ul {
-	left: 100%;
-	top: 0;
-        background: #fff;
+.navigation-main ul ul ul {
+        left: 100%;
+        top: 0;
 }
-.main-navigation ul ul a {
-	width: 200px;
+.navigation-main ul ul a {
+        width: 200px;
 }
-.main-navigation ul ul li {
+.navigation-main ul ul li {
 }
-.main-navigation ul ul li a {
-        border: none;
+.navigation-main li:hover > a {
 }
-.main-navigation li:hover > a {
+.navigation-main ul ul :hover > a {
 }
-.main-navigation ul ul :hover > a {
+.navigation-main ul ul a:hover {
 }
-.main-navigation ul ul a:hover {
+.navigation-main ul li:hover > ul {
+        display: block;
 }
-.main-navigation ul li:hover > ul {
-	display: block;
-}
-.main-navigation li.current_page_item a,
-.main-navigation li.current-menu-item a {
+.navigation-main li.current_page_item a,
+.navigation-main li.current-menu-item a {
 }
 
 /* Small menu */
 .menu-toggle {
-	cursor: pointer;
+        display: none;
+        cursor: pointer;
 }
-.main-small-navigation .menu {
-	display: none;
+
+.main-small-navigation ul {
+        display: none;
+}
+
+@media screen and (max-width: 600px) {
+    
+    .menu-toggle,
+    .main-small-navigation ul.nav-menu.toggled-on {
+        display: block;
+    }
+
+    .navigation-main ul {
+        display: none;
+    }
+    
 }
 
 /* =Content
@@ -689,6 +693,13 @@ a:active {
 .ui-datepicker-title span {
         color: $body-font-color;
         font-size: emCalc(16px);
+}
+
+/* =Screen Reader Compatability
+----------------------------------------------- */
+
+.screen-reader-text {
+        display: none;
 }
 
 /* =Infinite Scroll
