fixed author URI comment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Kebo Base Theme
 Theme URI: http://kebopowered.com/
 Author: Kebo
-Author: http://kebopowered.com/
+Author URI: http://kebopowered.com/
 Description: This is WordPress Theme built upon the _s Theme by Automattic, the Foundation 4 Framework by Zurb and uses Compass (SASS) for the CSS. It is designed to be used as a base on which to build your own Theme.
 Version: 0.51
 */
