--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,6 @@ Custom Branding Styles for Login Page
 */
 
 body.login div#login h1 a {
-        background-image: url('../images/login-logo.png');
+        background-image: url('../imgs/custom-login-logo.png');
         padding-bottom: 30px;
 }
